sass/abridge.scss
/* ... */
@if $hr {
  // https://github.com/picocss/pico
  hr {
    box-sizing: content-box; // Add the correct box sizing in Firefox
    height: 0;               // Add the correct box sizing in Firefox
    overflow: visible; // Show the overflow in Edge and IE
    border: none;
    border-top: 1px solid var(--f1);
  }
  header hr, footer hr {border-top: 1px solid var(--c4)}
}
@if $scroller {
  // https://github.com/picocss/pico
  // Wrapper to make any content responsive across all viewports
  figure {
    display: block;
    margin: 0;
    padding: 0;
    overflow-x: auto;

    figcaption {
      padding: var(--s1) 0;
      color: var(--c4);
    }
  }
}
@if $button {
  button,
  input,
  select,
  textarea {
    margin: 0;
    padding: .2rem var(--s1);
    max-width: 100%;
    background: var(--c2);
    border: 0;
    border-radius: .25rem;
    font: inherit;
    line-height: var(--fs);
    color: var(--f1);
  }
  button.del {
    color: var(--cr);
  }
  button,
  [type="button" i],
  [type="submit" i],
  [type="reset" i] {
    //-webkit-appearance: button;
    display: inline-block;
    text-align: center;
    white-space: nowrap;
    //background: var(--c2);
    color: var(--f1);
    border: 0;
    cursor: pointer;
    transition: opacity .25s;
  }
  button:hover,
  [type="button" i]:hover,
  [type="submit" i]:hover,
  [type="reset" i]:hover {
    opacity: .75;
  }
  button[disabled],
  [type="button" i][disabled],
  [type="submit" i][disabled],
  [type="reset" i][disabled] {
    opacity: .5;
  }
}
@if $form {
  fieldset {
    padding: .5rem .75rem;
    border: var(--bw) solid var(--c3);
    border-radius: .25rem;
  }
  legend {
    padding: 0 .25rem;
  }
  label {
    cursor: pointer;
    display: block;
    margin-bottom: .25rem;
  }
  // flagged by yellow lab tools, and not entirely necessary, so disabled for now.
  //select,
  //input:not([size]) input:not([type="button" i]) input:not([type="submit" i]) input:not([type="reset" i]) input:not([type="checkbox" i]) input:not([type="radio" i]) {
  //  width: 100%;
  //}
  [type="color" i] {
    min-height: 2.125rem;
  }
  select:not([multiple]):not([size]) {
    padding-right: 1.5rem;
    background-repeat: no-repeat;
    background-position: right .5rem center;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
  }
  textarea {
    width: 100%;
    resize: vertical;
  }
  textarea:not([rows]) {
    height: 8rem;
  }
}
@if $top {
  .topout {
    position: sticky;
    bottom: 1px;
    padding: 20px;
    place-self: end;
    margin-top: 110vh;
    pointer-events: none;
  }
  .topleft {
    margin-left: calc(100% - 80px);
  }
  .top {
    pointer-events: all;
    padding: 9px;
    border-radius: 9px;
    font-weight:700;
    color: var(--a1);
    background: var(--c2);
  }
  .top:hover {
    text-decoration: none;
    color: var(--c2);
    background: var(--a1);
    .svgh {
      background: var(--c2);
      opacity: 1;
    }
  }
}
@if $search {
  div:empty {
    display: none;
  }
  .stork-close-button {
    display: none;
  }
  .stork-title p {
    color: var(--a1);
    font-weight: var(--fh);
  }
  #suggestions {
    z-index: 9;
    background: var(--c1);
    border: 2px solid var(--c3);
    position: static;
    left: 0;
    width: 100%;
    margin-top: var(--s1);
    max-height: 500px;
    overflow: auto;
  }
  #suggestions a, #results a {
    display: block;
    text-decoration: none;
    padding: var(--s1);
    margin: 0 var(--s1);
  }
  #suggestions a:hover,
  #suggestions a:focus,
  #results a:hover,
  #results a:focus {
    background: var(--c2);
  }
  #suggestions span, #results span {
    line-height: 1.5;
    display: block;
  }
  #suggestions span:first-child, #results span:first-child {
    font-weight: var(--fh);
  }
  #suggestions span:nth-child(2), #results span:nth-child(2) {
    color: var(--f1);
  }
  .results {//parent div of suggestions div
    display: block;
    position: relative;
    width: 100%;
  }
  .searchd {
    display: flex;
    align-items: center;
    white-space: nowrap;
  }
  .searchd > input {
    max-width: 100%;
    flex-grow: 1;
    padding-right: 1rem;//inlayed search icon
  }
  .searchd > button {//inlayed search icon
    position: relative;
    left: -1rem;
    margin-left: -1rem;
  }
  // mobile first is min-width for desktop instead of max-width for mobile
  @if map-get($breakpoints, "md") {
    @media (min-width: map-get($breakpoints, "md")) {
      .searchd > input {
        max-width: 15rem;
        flex-grow: 0;
      }
      #suggestions {
        position: absolute;
        right: 0;
        left: unset;
        width: 500px;
      }
    }
  }
}
@if $blocks {
  .block {
    max-width: 30rem;
    margin: var(--s2) auto;
  }
  .sblock {
    max-width: 15rem;
    min-width: 14rem;
    margin-left: var(--s1);
  }
  .blockdiv {
    border-radius: var(--br);
    border-top: 5px solid var(--a1);
    background-color: var(--c2);
    margin-top: var(--s2);
    padding: 0 var(--s2) var(--s2);
    max-height: 100vh;
    overflow: auto;
    a {
      color: var(--f1);
      &:hover {
        color: var(--a2);
      }
    }
    ol {
      margin: 0;
    }
  }
  .sticky {
    position: sticky;
    top: var(--s2);
  }
  .sblock {
    display: none;//hide in mobile view
  }
  @if map-get($breakpoints, "md") {
    // mobile first is min-width for desktop instead of max-width for mobile
    @media (min-width: map-get($breakpoints, "md")) {
      .sblock {
        display: unset;//show in desktop view
      }
      .block {
        display: none;//hide in desktop view, TODO: depending on what blocks get used for, this could be a problem in the future, should be fine for now.
      }
    }
  }
}
@if $imgswap {
  .img-swap-div {
    .img-main {
      display: block;
    }
    .img-swap {
      display: none;
    }
    &:hover .img-swap {
      display: block;
    }
    &:hover .img-main {
      display: none;
    }
  }
}
/* ... */

